--- a/databases-and-py.ipynb
+++ b/databases-and-py.ipynb
@@ -2,12 +2,12 @@
     "metadata": {
         "kernelspec": {
             "name": "python3",
-            "display_name": "Python 3",
+            "display_name": "Python 3 (ipykernel)",
             "language": "python"
         },
         "language_info": {
             "name": "python",
-            "version": "3.8.8",
+            "version": "3.9.7",
             "mimetype": "text/x-python",
             "codemirror_mode": {
                 "name": "ipython",
@@ -63,14 +63,93 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "import sqlite3 as sl \r\n",
+                "import pandas as pd "
             ],
             "metadata": {
                 "azdata_cell_guid": "965f15d3-27b1-43ed-97e4-8c6fd482476c",
-                "tags": []
+                "tags": [],
+                "language": "python"
             },
             "outputs": [],
-            "execution_count": 45
+            "execution_count": 1
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "df = pd.read_csv('tv_shows.csv')"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "fc972be0-257f-40cd-bba5-753bf1e0ed78",
+                "language": "python"
+            },
+            "outputs": [],
+            "execution_count": 3
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "df.info()"
+            ],
+            "metadata": {
+                "language": "python",
+                "azdata_cell_guid": "8ae11274-a1e9-4fba-b2b3-85af142eeecf"
+            },
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "<class 'pandas.core.frame.DataFrame'>\nRangeIndex: 5368 entries, 0 to 5367\nData columns (total 12 columns):\n #   Column           Non-Null Count  Dtype \n---  ------           --------------  ----- \n 0   Unnamed: 0       5368 non-null   int64 \n 1   ID               5368 non-null   int64 \n 2   Title            5368 non-null   object\n 3   Year             5368 non-null   int64 \n 4   Age              3241 non-null   object\n 5   IMDb             4406 non-null   object\n 6   Rotten Tomatoes  5368 non-null   object\n 7   Netflix          5368 non-null   int64 \n 8   Hulu             5368 non-null   int64 \n 9   Prime Video      5368 non-null   int64 \n 10  Disney+          5368 non-null   int64 \n 11  Type             5368 non-null   int64 \ndtypes: int64(8), object(4)\nmemory usage: 503.4+ KB\n",
+                    "output_type": "stream"
+                }
+            ],
+            "execution_count": 4
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "df = df.drop(columns='Unnamed: 0')"
+            ],
+            "metadata": {
+                "language": "python",
+                "azdata_cell_guid": "ac6dd5e6-cf14-4349-9ad8-a455d91bf23b"
+            },
+            "outputs": [],
+            "execution_count": 5
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "df = df.rename(columns={\"Disney+\": \"Disney\", \"Rotten Tomatoes\": \"Rotten_Tomatoes\", \"Prime Video\": \"Prime_Video\"})"
+            ],
+            "metadata": {
+                "language": "python",
+                "azdata_cell_guid": "f5f15299-e078-4586-908a-e89e5d4bd828"
+            },
+            "outputs": [],
+            "execution_count": 6
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "df.head()\r\n",
+                ""
+            ],
+            "metadata": {
+                "language": "python",
+                "azdata_cell_guid": "d4b975fb-f774-4824-8962-2416912d825e"
+            },
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": "   ID             Title  Year  Age    IMDb Rotten_Tomatoes  Netflix  Hulu  \\\n0   1      Breaking Bad  2008  18+  9.4/10         100/100        1     0   \n1   2   Stranger Things  2016  16+  8.7/10          96/100        1     0   \n2   3   Attack on Titan  2013  18+  9.0/10          95/100        1     1   \n3   4  Better Call Saul  2015  18+  8.8/10          94/100        1     0   \n4   5              Dark  2017  16+  8.8/10          93/100        1     0   \n\n   Prime_Video  Disney  Type  \n0            0       0     1  \n1            0       0     1  \n2            0       0     1  \n3            0       0     1  \n4            0       0     1  ",
+                        "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ID</th>\n      <th>Title</th>\n      <th>Year</th>\n      <th>Age</th>\n      <th>IMDb</th>\n      <th>Rotten_Tomatoes</th>\n      <th>Netflix</th>\n      <th>Hulu</th>\n      <th>Prime_Video</th>\n      <th>Disney</th>\n      <th>Type</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Breaking Bad</td>\n      <td>2008</td>\n      <td>18+</td>\n      <td>9.4/10</td>\n      <td>100/100</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>Stranger Things</td>\n      <td>2016</td>\n      <td>16+</td>\n      <td>8.7/10</td>\n      <td>96/100</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>Attack on Titan</td>\n      <td>2013</td>\n      <td>18+</td>\n      <td>9.0/10</td>\n      <td>95/100</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>Better Call Saul</td>\n      <td>2015</td>\n      <td>18+</td>\n      <td>8.8/10</td>\n      <td>94/100</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>Dark</td>\n      <td>2017</td>\n      <td>16+</td>\n      <td>8.8/10</td>\n      <td>93/100</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+                    },
+                    "metadata": {},
+                    "execution_count": 7,
+                    "output_type": "execute_result"
+                }
+            ],
+            "execution_count": 7
         },
         {
             "cell_type": "markdown",
@@ -85,14 +164,15 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "con = sl.connect('shows.db')\r\n",
+                "df.to_sql('shows', con)"
             ],
             "metadata": {
-                "azdata_cell_guid": "cae4affc-d930-4649-9c39-551475a83b5b",
-                "tags": []
+                "azdata_cell_guid": "de7492ac-0e01-41a3-9e9d-c6aa3b8c6000",
+                "language": "python"
             },
             "outputs": [],
-            "execution_count": 45
+            "execution_count": 8
         },
         {
             "cell_type": "markdown",
@@ -107,14 +187,24 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "with con:\r\n",
+                "    data = con.execute(\"SELECT * FROM shows WHERE ID <= 20\")\r\n",
+                "    for row in data:\r\n",
+                "        print (row)"
             ],
             "metadata": {
                 "azdata_cell_guid": "c6aa3980-3eef-4d7d-8f04-961508662147",
-                "tags": []
+                "tags": [],
+                "language": "python"
             },
-            "outputs": [],
-            "execution_count": 45
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "(0, 1, 'Breaking Bad', 2008, '18+', '9.4/10', '100/100', 1, 0, 0, 0, 1)\n(1, 2, 'Stranger Things', 2016, '16+', '8.7/10', '96/100', 1, 0, 0, 0, 1)\n(2, 3, 'Attack on Titan', 2013, '18+', '9.0/10', '95/100', 1, 1, 0, 0, 1)\n(3, 4, 'Better Call Saul', 2015, '18+', '8.8/10', '94/100', 1, 0, 0, 0, 1)\n(4, 5, 'Dark', 2017, '16+', '8.8/10', '93/100', 1, 0, 0, 0, 1)\n(5, 6, 'Avatar: The Last Airbender', 2005, '7+', '9.3/10', '93/100', 1, 0, 1, 0, 1)\n(6, 7, 'Peaky Blinders', 2013, '18+', '8.8/10', '93/100', 1, 0, 0, 0, 1)\n(7, 8, 'The Walking Dead', 2010, '18+', '8.2/10', '93/100', 1, 0, 0, 0, 1)\n(8, 9, 'Black Mirror', 2011, '18+', '8.8/10', '92/100', 1, 0, 0, 0, 1)\n(9, 10, \"The Queen's Gambit\", 2020, '18+', '8.6/10', '92/100', 1, 0, 0, 0, 1)\n(10, 11, 'Mindhunter', 2017, '18+', '8.6/10', '90/100', 1, 0, 0, 0, 1)\n(11, 12, 'Community', 2009, '7+', '8.5/10', '90/100', 1, 1, 1, 0, 1)\n(12, 13, 'Narcos', 2015, '18+', '8.8/10', '90/100', 1, 0, 0, 0, 1)\n(13, 14, 'Shameless', 2011, '18+', '8.5/10', '90/100', 1, 1, 1, 0, 1)\n(14, 15, 'Money Heist', 2017, '18+', '8.3/10', '90/100', 1, 0, 0, 0, 1)\n(15, 16, \"Marvel's Daredevil\", 2015, '18+', '8.6/10', '90/100', 1, 0, 0, 0, 1)\n(16, 17, 'Lucifer', 2016, '16+', '8.1/10', '90/100', 1, 0, 0, 0, 1)\n(17, 18, 'Supernatural', 2005, '16+', '8.4/10', '89/100', 1, 0, 0, 0, 1)\n(18, 19, 'The Witcher', 2019, '18+', '8.2/10', '89/100', 1, 0, 0, 0, 1)\n(19, 20, 'Ozark', 2017, '18+', '8.4/10', '89/100', 1, 0, 0, 0, 1)\n",
+                    "output_type": "stream"
+                }
+            ],
+            "execution_count": 9
         },
         {
             "cell_type": "markdown",
@@ -129,13 +219,39 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "with con:\r\n",
+                "    con.execute(\"\"\"CREATE TABLE watch_list (\r\n",
+                "        ID INT PRIMARY KEY,\r\n",
+                "        Title TEXT \r\n",
+                "        )\"\"\")"
             ],
             "metadata": {
-                "azdata_cell_guid": "f95defad-521b-4112-8435-08daaac80b80"
+                "azdata_cell_guid": "f95defad-521b-4112-8435-08daaac80b80",
+                "language": "python"
             },
             "outputs": [],
-            "execution_count": 45
+            "execution_count": 10
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "sql = 'INSERT INTO watch_list (ID, Title) values (?, ?)'\r\n",
+                "data = [\r\n",
+                "    (10, \"The Queen's Gambit\"),\r\n",
+                "    (12, \"Community\"),\r\n",
+                "    (14, \"Shameless\"),\r\n",
+                "    (17, \"Lucifer\")\r\n",
+                "]\r\n",
+                "\r\n",
+                "with con:\r\n",
+                "    con.executemany(sql, data)"
+            ],
+            "metadata": {
+                "language": "python",
+                "azdata_cell_guid": "2b4d26ec-7121-4ca2-ba05-85a8b5ee6486"
+            },
+            "outputs": [],
+            "execution_count": 12
         },
         {
             "cell_type": "markdown",
@@ -154,13 +270,24 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "df.describe()"
             ],
             "metadata": {
-                "azdata_cell_guid": "8e4f3757-474f-4e20-b861-db973437b541"
+                "azdata_cell_guid": "8e4f3757-474f-4e20-b861-db973437b541",
+                "language": "python"
             },
-            "outputs": [],
-            "execution_count": 45
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": "                ID         Year      Netflix         Hulu  Prime_Video  \\\ncount  5368.000000  5368.000000  5368.000000  5368.000000  5368.000000   \nmean   2814.945790  2012.628726     0.367176     0.301975     0.341095   \nstd    1672.385727    10.142813     0.482080     0.459157     0.474122   \nmin       1.000000  1904.000000     0.000000     0.000000     0.000000   \n25%    1345.750000  2011.000000     0.000000     0.000000     0.000000   \n50%    2788.000000  2016.000000     0.000000     0.000000     0.000000   \n75%    4308.250000  2018.000000     1.000000     1.000000     1.000000   \nmax    5717.000000  2021.000000     1.000000     1.000000     1.000000   \n\n            Disney    Type  \ncount  5368.000000  5368.0  \nmean      0.065387     1.0  \nstd       0.247231     0.0  \nmin       0.000000     1.0  \n25%       0.000000     1.0  \n50%       0.000000     1.0  \n75%       0.000000     1.0  \nmax       1.000000     1.0  ",
+                        "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ID</th>\n      <th>Year</th>\n      <th>Netflix</th>\n      <th>Hulu</th>\n      <th>Prime_Video</th>\n      <th>Disney</th>\n      <th>Type</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>5368.000000</td>\n      <td>5368.000000</td>\n      <td>5368.000000</td>\n      <td>5368.000000</td>\n      <td>5368.000000</td>\n      <td>5368.000000</td>\n      <td>5368.0</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>2814.945790</td>\n      <td>2012.628726</td>\n      <td>0.367176</td>\n      <td>0.301975</td>\n      <td>0.341095</td>\n      <td>0.065387</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>1672.385727</td>\n      <td>10.142813</td>\n      <td>0.482080</td>\n      <td>0.459157</td>\n      <td>0.474122</td>\n      <td>0.247231</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>1.000000</td>\n      <td>1904.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>1345.750000</td>\n      <td>2011.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>2788.000000</td>\n      <td>2016.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>4308.250000</td>\n      <td>2018.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>0.000000</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>5717.000000</td>\n      <td>2021.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+                    },
+                    "metadata": {},
+                    "execution_count": 11,
+                    "output_type": "execute_result"
+                }
+            ],
+            "execution_count": 11
         },
         {
             "cell_type": "markdown",
@@ -175,13 +302,23 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "with con:\r\n",
+                "    data = con.execute(\"SELECT shows.Title, shows.Netflix, shows.Hulu, shows.Prime_Video, shows.Disney FROM shows INNER JOIN watch_list ON shows.ID = watch_list.ID\")\r\n",
+                "    for row in data:\r\n",
+                "        print (row)"
             ],
             "metadata": {
-                "azdata_cell_guid": "b871523e-a476-4f3a-a6ac-2e251f140e84"
+                "azdata_cell_guid": "b871523e-a476-4f3a-a6ac-2e251f140e84",
+                "language": "python"
             },
-            "outputs": [],
-            "execution_count": 45
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "(\"The Queen's Gambit\", 1, 0, 0, 0)\n('Community', 1, 1, 1, 0)\n('Shameless', 1, 1, 1, 0)\n('Lucifer', 1, 0, 0, 0)\n",
+                    "output_type": "stream"
+                }
+            ],
+            "execution_count": 19
         },
         {
             "cell_type": "markdown",
@@ -190,14 +327,26 @@
                 "\n",
                 "Now that you have done your analysis, make note of the answers to the following questions by editing the text cell:\n",
                 "\n",
-                "1. Was every show on your watchlist in the Kaggle dataset? Do you have any ideas as to why a show might not have been present?\n",
-                "2. Did you include a show or shows in your watchlist that is exclusive to one of the platforms? How might that have impacted your analysis?\n",
-                "2. Which streaming service(s) offered the most shows on your watchlist? Which streaming service(s) offered the least?\n",
-                "3. Based on the shows you want to watch and the results of your analysis, is there a streaming service you think would be a good fit for you?"
+                "1. Was every show on your watchlist in the Kaggle dataset? Do you have any ideas as to why a show might not have been present? \n",
+                "\n",
+                "Yes because I picked it from the list. But it would make sense for some shows to be missing, especially since the data is older.  \n",
+                "\n",
+                "1. Did you include a show or shows in your watchlist that is exclusive to one of the platforms? How might that have impacted your analysis?\n",
+                "\n",
+                "Two shows were only on Netflix.  \n",
+                "\n",
+                "1. Which streaming service(s) offered the most shows on your watchlist? Which streaming service(s) offered the least?\n",
+                "\n",
+                "Netflix had them all. Disney had none.  \n",
+                "\n",
+                "1. Based on the shows you want to watch and the results of your analysis, is there a streaming service you think would be a good fit for you?\n",
+                "\n",
+                "Netflix gets my money."
             ],
             "metadata": {
                 "azdata_cell_guid": "909689e4-1aae-41e3-b1f8-158ebe5ec3ca"
-            }
+            },
+            "attachments": {}
         }
     ]
 }
